# ecole-cpp-f-examen

./: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  KNN.h  KNNDouble.cpp  KNNDouble.h  KNNString.cpp  KNNString.h  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h  Zoo.cpp  Zoo.h  main.cpp
